<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10sp"
	    android:layout_marginTop="5sp"
	    android:textSize="20sp"
	    android:text="@string/morning_report_set_text"
	    />
	
	<TextView
	    android:id="@+id/morning_text"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="25sp"
	    android:gravity="center"
	    android:textSize="65sp"
	    />
	
	<TimePicker
        android:id="@+id/morning_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_marginTop="15sp"
		android:layout_marginLeft="15sp"
        />
	
	<CheckBox 
	    android:id="@+id/morning_box"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="25sp"
	    android:textSize="20sp"
	    android:text="@string/bedtime_checkbox"
	    />
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dip"
	    android:layout_weight="1"
	    />
	
	<Button
		android:id="@+id/btnSchedule"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/morning_report_set"
        />
    <Button
        android:id="@+id/btnReturn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/return_to_main"
        />
    
</LinearLayout>
